--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<link rel="shortcut icon" href="img/oi.png"/>
 <title>Compra Capital</title>
 <link rel="stylesheet" href="style.css">
 <style type="text/css">
@@ -67,12 +66,14 @@ button:active{
 	cursor: pointer;
 }.container #next, 
 .container #prev{
-	bottom: 0;
+	top: 0;
 	right: 0;
 	font-size: 0px; 
 	position: absolute;
 	color: transparent;
-	z-index: -90;
+	z-index: -90; 
+	visibility: hidden; 
+	opacity: 0;
 }	
 .container .slide{
 	display: none;
@@ -83,20 +84,19 @@ button:active{
 	background: none;
 }
 .container{
-	padding: 5px;
 	color: white;
 	border-radius: 5px;
 	border: none;
 	display: block;
-	background: none; z-index: 999999; 
+	background: none; z-index: 1; 
 	background: none;
-	bottom: 77px;
-	left: 10px;
+	bottom: 70px;
+	left: 0px;
 	position: fixed;
 }
 .tEX{
     animation: start .4s ease-in-out forwards;
-	font-size: 15px; color: #acdf99; padding: 5px; background:#77bb33;
+	font-size: 15px; /*color: #acdf99;*/ padding: 10px; background:#77bb33;
 }
 @keyframes start{
     from {
@@ -108,18 +108,6 @@ button:active{
         transform: translateY(0);
     }
 }
-.alT{
-	opacity: 0;
-	z-index: -999;
-	color: transparent;
-	right: 5px;
-	top: 0px;
-	position: fixed;
-	font-size: 0px;
-	padding: 0px;
-	visibility: hidden;
-	background: transparent;
-}
 @media only screen and (max-width: 800px){
 .div1{
 	padding: 5px 15px; border-radius: 5px; border: 1px solid #888; display: block; position: ; width: 280px;
@@ -129,34 +117,26 @@ header{
 }
 .divl{margin-top: 37px;}
 .el{border: 1px solid #990;}
+.tEX{
+    animation: start .4s ease-in-out forwards;
+	font-size: 15px; color: #acdf99; padding: 10px; background:#77bb33;
+}
 }
 </style>
 </head>
 <body>
 
-<a href="mailto:p1335614@gmail.com" title="Info" class="cElect" onclick="audio.play();">@
-
-
-
-<nav class="sl0"></nav>
-<nav class="sl1"></nav>
-
-<nav class="sl2"></nav>
-
-
-
-
-
-</a>
+<a href="#" title="Info" class="cElect" onclick="audio.play();">@</a>
+<nav></nav>
 
 
 <header>
-<a href=mailto:p1335614@gmail.com" id="cc">Compra Capital</a>
+<a href="mailto:p1335614@gmail.com" id="cc" onclick="audio.play();">Compra Capital</a>
 </header>
 
 <div id="modalbox0" class="modal0">
 <div class="modalcontent0">
-<span>Agradecemos a preferência!</span> <a href="#" style="background:transparent; color:white; padding: 5px;">↺</a>
+<span>Agradecemos pela preferência!</span> <a href="#" style="background:transparent; color:white; padding: 5px;" onclick="audio.play();">↺</a>
 </div>
 </div>
 <br/>
@@ -166,19 +146,19 @@ header{
 <center title="">
 <div class="container">
 <div class="slide active">
-<p class="tEX"><i>"***878820 Recebeu 1010.97 Kz."</i></p>
+<p class="tEX">"***878820 Recebeu 10.110,97 Kz."</p>
 <div id="next" onclick="next()"> >  </div>
 <div id="prev" onclick="prev()"> < </div>
 </div>
 
 <div class="slide">
-<p class="tEX"><i>"***871120 Recebeu 1010.97 Kz."</i></p>
+<p class="tEX">"***871120 Recebeu 1010.97 Kz."</p>
 <div id="next" onclick="next()"> > </div>
 <div id="prev" onclick="prev()"> < </div>
 </div>
 	
 <div class="slide">
-<p class="tEX"><i>"***8788101 Recebeu 1010.97 Kz."</i></p>
+<p class="tEX">"***8788101 Recebeu 505.97 Kz."</p>
 <div id="next" onclick="next()"> > </div>
 <div id="prev" onclick="prev()"> < </div>
 </div> 
@@ -188,23 +168,22 @@ header{
 
 
 <center class="divl">
-<div class="div3"><p class="pt">101,25 KZS</p><h2>CC1 0,1%</h2><p>Compre este pacote Capital e beneficie de 0,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox1"><button class="bt">Comprar</button></a></div>
-<div class="div3"><p class="pt">252,50 KZS</p><h2>CC2 0,2%</h2><p>Compre este pacote Capital e beneficie de 0,2% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox2"><button class="bt">Comprar</button></a></div>
-<div class="div3"><p class="pt">505,00 KZS</p><h2>CC3 0,5%</h2><p>Compre este pacote Capital e beneficie de 0,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox3"><button class="bt">Comprar</button></a></div>
-<div class="div3"><p class="pt">757,50 KZS</p><h2>CC4 0,7%</h2><p>Compre este pacote Capital e beneficie de 0,7% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox4"><button class="bt">Comprar</button></a></div>
-<div class="div3"><p class="pt">1010,00 KZS</p><h2>CC5 1,1%</h2><p>Compre este pacote Capital e beneficie de 1,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox5"><button class="bt">Comprar</button></a></div>
-<div class="div3"><p class="pt">2525,00 KZS</p><h2>CC7 2,5%</h2><p>Compre este pacote Capital e beneficie de 2,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox6"><button class="bt">Comprar</button></a></div>
-<div class="div3"><p class="pt">5050,00 KZS</p><h2>CC8 5,1%</h2><p>Compre este pacote Capital e beneficie de 5,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox7"><button class="bt">Comprar</button></a></div>
-<div class="div3"><p class="pt">7575,00 KZS</p><h2>CC6 7,5%</h2><p>Compre este pacote Capital e beneficie de 7,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox8"><button class="bt">Comprar</button></a></div>
-<div class="div3"><p class="pt">10.100,00 KZS</p><h2>CC9 10,1%</h2><p>Compre este pacote Capital e beneficie de 10,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox9"><button class="bt">Comprar</button></a></div><br/>
+<div class="div3"><p class="pt">101,25 KZS</p><h2>CC1 0,1%</h2><p>Compre este pacote Capital e beneficie de 0,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox1"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">252,50 KZS</p><h2>CC2 0,2%</h2><p>Compre este pacote Capital e beneficie de 0,2% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox2"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">505,00 KZS</p><h2>CC3 0,5%</h2><p>Compre este pacote Capital e beneficie de 0,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox3"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">757,50 KZS</p><h2>CC4 0,7%</h2><p>Compre este pacote Capital e beneficie de 0,7% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox4"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">1010,00 KZS</p><h2>CC5 1,1%</h2><p>Compre este pacote Capital e beneficie de 1,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox5"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">2525,00 KZS</p><h2>CC7 2,5%</h2><p>Compre este pacote Capital e beneficie de 2,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox6"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">5050,00 KZS</p><h2>CC8 5,1%</h2><p>Compre este pacote Capital e beneficie de 5,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox7"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">7575,00 KZS</p><h2>CC6 7,5%</h2><p>Compre este pacote Capital e beneficie de 7,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox8"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">10.100,00 KZS</p><h2>CC9 10,1%</h2><p>Compre este pacote Capital e beneficie de 10,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox9"><button class="bt" onclick="audio.play();">Comprar</button></a></div><br/>
 
 <div id="modalbox1" class="modal1">
 <div class="modalcontent1">
 <p>Envie 100.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 101.25 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 5px; font-size:10px;" >&copy; <span id="yeah"></span>.</p>
-<a href="#modalbox0"><button class="bt">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yeah"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
@@ -213,7 +192,7 @@ header{
 <p>Envie 250.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 252,50 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 5px; font-size:10px;" >&copy; <span id="yh"></span>.</p><a href="#modalbox0"><button class="bt">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yh"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
@@ -222,7 +201,7 @@ header{
 <p>Envie 500.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 505,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p> 
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 5px; font-size:10px;" >&copy; <span id="yea"></span>.</p><a href="#modalbox0"><button class="bt">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yea"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 <div id="modalbox4" class="modal4">
@@ -230,7 +209,7 @@ header{
 <p>Envie 700.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 757,50 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 5px; font-size:10px;" >&copy; <span id="hy"></span>.</p><a href="#modalbox0"><button class="bt">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="hy"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
@@ -239,7 +218,7 @@ header{
 <p>Envie 1000.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 1010.00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 5px; font-size:10px;" >&copy; <span id="ea"></span>.</p><a href="#modalbox0"><button class="bt">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="ea"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
@@ -248,7 +227,7 @@ header{
 <p>Envie 2500,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 2525,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 5px; font-size:10px;" >&copy; <span id="ye"></span>.</p><a href="#modalbox0"><button class="bt">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="ye"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
@@ -257,7 +236,7 @@ header{
 <p>Envie 5000.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 5050,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 5px; font-size:10px;" >&copy; <span id="ya"></span>.</p><a href="#modalbox0"><button class="bt">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="ya"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
@@ -266,7 +245,7 @@ header{
 <p>Envie 7500,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 7575,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 5px; font-size:10px;" >&copy; <span id="yha"></span>.</p><a href="#modalbox0"><button class="bt">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yha"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
@@ -275,7 +254,7 @@ header{
 <p>Envie 10.000,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 10.100,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 5px; font-size:10px;" >&copy; <span id="yhe"></span>.</p><a href="#modalbox0"><button class="bt">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yhe"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 </div>
