--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ button:active{
 ::-webkit-scrollbar-thumb{
 	background: #111;
 	cursor: pointer;
-}.container #next, 
+}
+.container #next, 
 .container #prev{
 	top: 0;
 	right: 0;
