--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ header{
 </head>
 <body>
 
-<a href="#" title="Info" class="cElect" onclick="audio.play();">@</a>
+<a href="https://web.facebook.com/profile.php?id=61557402186652" target="_blank" title="Info" class="cElect" onclick="audio.play();">@</a>
 <nav></nav>
 
 
@@ -144,7 +144,7 @@ header{
 <br/>
 
 
-<span class=""><!--==================-->
+<!--==================-->
 <center title="">
 <div class="container">
 <div class="slide active">
@@ -166,7 +166,6 @@ header{
 </div> 
 </div></center>
 <!--==================-->
-</span>
 
 
 <center class="divl">
