--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ button:active{
 }
 .tEX{
     animation: start .4s ease-in-out forwards;
-	font-size: 15px; /*color: #acdf99;*/ padding: 10px; background:#77bb33;
+	font-size: 15px; color: white; /*color: #acdf99;*/ padding: 10px; background:#77bb33;
 }
 @keyframes start{
     from {
@@ -121,7 +121,7 @@ header{
 .el{border: 1px solid #990;}
 .tEX{
     animation: start .4s ease-in-out forwards;
-	font-size: 15px; color: #acdf99; padding: 10px; background:#77bb33;
+	font-size: 15px; color: white; padding: 10px; background:#77bb33;
 }
 }
 </style>
