--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="shortcut icon" href="img/oi.png"/>
-<title>Compra Capital</title>
+<title>Compra Cambial</title>
 <link rel="stylesheet" href="style.css">
 <style type="text/css">
 *{
@@ -20,7 +20,7 @@ body{
 	font-size: 15px;	
 	background: linear-gradient(80deg, #333, #060606, black, #333); 
 }
-#cc{color: #777; text-shadow: 0 1px gold;}
+#cc{color: #777; text-shadow: 0 1px gold; font-size: 16px;}
 a{text-decoration: none;}
 hr{border: 1px solid #990;}
 .el{border: 0.5px solid #999;}
@@ -133,7 +133,7 @@ header{
 
 
 <header>
-<a href="mailto:p1335614@gmail.com" id="cc" onclick="audio.play();">Compra Capital</a>
+<a href="mailto:p1335614@gmail.com" id="cc" onclick="audio.play();">Compra Cambial</a>
 </header>
 
 <div id="modalbox0" class="modal0">
