--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@ body{
 a{text-decoration: none;}
 hr{border: 1px solid #990;}
 .el{border: 0.5px solid #999;}
+#alt{ 
+	background: transparebt;
+	right: 0px; 
+	top: 0px;
+	font-size: 0px;
+	z-index: -1;
+	opacity: 0;
+	position: fixed;
+}
 header{
 	position: fixed; z-index: 999999; top: 0; left: 0;
 	width: 100%; background: linear-gradient(350deg,#040404, #090909, #333); padding: 16px; border-bottom: 1px solid #999;
@@ -354,6 +363,6 @@ function prev(){
 	var audio = new Audio();
 	audio.src = 'audio/i.mp3';
 </script>
-<a href="https://www.contadorvisitasgratis.com" target="_blank" class="alT" title="Visitas"><img src="https://counter11.optistats.ovh/private/contadorvisitasgratis.php?c=3wetp6ytebk1g9lu2m5qqt6lsbkqukat" border="0"></a>
+<a href="https://www.contadorvisitasgratis.com" target="_blank" id="alt" title="Visitas"><img src="https://counter3.optistats.ovh/private/contadorvisitasgratis.php?c=wk1xp84lnfng6zj15999ssps95nxx8p4" border="0"></a>
 </body>
 </html>
