--- a/index.html
+++ b/index.html
@@ -157,19 +157,19 @@ header{
 <center title="">
 <div class="container">
 <div class="slide active">
-<p class="tEX">"***878820 Recebeu 10.110,97 Kz."</p>
+<p class="tEX">"***878820 Recebeu 10.110,97 Kz"</p>
 <div id="next" onclick="next()"> >  </div>
 <div id="prev" onclick="prev()"> < </div>
 </div>
 
 <div class="slide">
-<p class="tEX">"***871120 Recebeu 1010.97 Kz."</p>
+<p class="tEX">"***871120 Recebeu 1010.97 Kz"</p>
 <div id="next" onclick="next()"> > </div>
 <div id="prev" onclick="prev()"> < </div>
 </div>
 	
 <div class="slide">
-<p class="tEX">"***8788101 Recebeu 505.97 Kz."</p>
+<p class="tEX">"***8788101 Recebeu 505.97 Kz"</p>
 <div id="next" onclick="next()"> > </div>
 <div id="prev" onclick="prev()"> < </div>
 </div> 
