--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ header{
 
 
 <header>
-<a href="mailto:p1335614@gmail.com" id="cc" onclick="audio.play();">Compra Cambial</a>
+<a href="mailto:p1335614@gmail.com" id="cc" title="Saber mais" onclick="audio.play();">Compra Cambial</a>
 </header>
 
 <div id="modalbox0" class="modal0">
@@ -154,7 +154,7 @@ header{
 
 
 <!--==================-->
-<center title="">
+<center title="Clientes">
 <div class="container">
 <div class="slide active">
 <p class="tEX">"***278820 Recebeu 10.110,97 Kz"</p>
@@ -178,22 +178,22 @@ header{
 
 
 <center class="divl">
-<div class="div3"><p class="pt">101,25 KZS</p><h2>CC1 0,1%</h2><p>Compre este pacote Capital e beneficie de 0,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox1"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">252,50 KZS</p><h2>CC2 0,2%</h2><p>Compre este pacote Capital e beneficie de 0,2% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox2"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">505,00 KZS</p><h2>CC3 0,5%</h2><p>Compre este pacote Capital e beneficie de 0,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox3"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">757,50 KZS</p><h2>CC4 0,7%</h2><p>Compre este pacote Capital e beneficie de 0,7% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox4"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">1010,00 KZS</p><h2>CC5 1,1%</h2><p>Compre este pacote Capital e beneficie de 1,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox5"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">2525,00 KZS</p><h2>CC7 2,5%</h2><p>Compre este pacote Capital e beneficie de 2,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox6"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">5050,00 KZS</p><h2>CC8 5,1%</h2><p>Compre este pacote Capital e beneficie de 5,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox7"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">7575,00 KZS</p><h2>CC6 7,5%</h2><p>Compre este pacote Capital e beneficie de 7,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox8"><button class="bt" onclick="audio.play();">Comprar</button></a></div>
-<div class="div3"><p class="pt">10.100,00 KZS</p><h2>CC9 10,1%</h2><p>Compre este pacote Capital e beneficie de 10,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox9"><button class="bt" onclick="audio.play();">Comprar</button></a></div><br/>
+<div class="div3"><p class="pt">101,25 KZS</p><h2>CC1 0,1%</h2><p>Compre este pacote Capital e beneficie de 0,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox1"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">252,50 KZS</p><h2>CC2 0,2%</h2><p>Compre este pacote Capital e beneficie de 0,2% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox2"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">505,00 KZS</p><h2>CC3 0,5%</h2><p>Compre este pacote Capital e beneficie de 0,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox3"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">757,50 KZS</p><h2>CC4 0,7%</h2><p>Compre este pacote Capital e beneficie de 0,7% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox4"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">1010,00 KZS</p><h2>CC5 1,1%</h2><p>Compre este pacote Capital e beneficie de 1,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox5"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">2525,00 KZS</p><h2>CC7 2,5%</h2><p>Compre este pacote Capital e beneficie de 2,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox6"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">5050,00 KZS</p><h2>CC8 5,1%</h2><p>Compre este pacote Capital e beneficie de 5,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox7"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">7575,00 KZS</p><h2>CC6 7,5%</h2><p>Compre este pacote Capital e beneficie de 7,5% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox8"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div>
+<div class="div3"><p class="pt">10.100,00 KZS</p><h2>CC9 10,1%</h2><p>Compre este pacote Capital e beneficie de 10,1% em bônus e mais registros de fidelidades grátis. Construa a sua carteira de riqueza com os nossos serviços. Quanto mais comprares mais ganharás.</p><br/><a href="#modalbox9"><button class="bt" title="Comprar" onclick="audio.play();">Comprar</button></a></div><br/>
 
 <div id="modalbox1" class="modal1">
 <div class="modalcontent1">
 <p>Envie 100.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 101.25 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yeah"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yeah"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
@@ -202,7 +202,7 @@ header{
 <p>Envie 250.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 252,50 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yh"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yh"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
@@ -211,7 +211,7 @@ header{
 <p>Envie 500.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 505,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p> 
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yea"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yea"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 <div id="modalbox4" class="modal4">
@@ -219,7 +219,7 @@ header{
 <p>Envie 700.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 757,50 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="hy"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="hy"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
@@ -228,7 +228,7 @@ header{
 <p>Envie 1000.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 1010.00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="ea"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="ea"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
@@ -237,7 +237,7 @@ header{
 <p>Envie 2500,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 2525,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="ye"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="ye"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
@@ -246,7 +246,7 @@ header{
 <p>Envie 5000.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 5050,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="ya"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="ya"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
@@ -255,7 +255,7 @@ header{
 <p>Envie 7500,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 7575,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yha"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yha"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
@@ -264,7 +264,7 @@ header{
 <p>Envie 10.000,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 10.100,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
 <p>Atendemos das 09:00 até às 15:00.</p>
-<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yhe"></span>.</p><a href="#modalbox0"><button class="bt" onclick="audio.play();">OK</button></a>
+<p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yhe"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 </div>
