--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ header{
 
 <div id="modalbox0" class="modal0">
 <div class="modalcontent0">
-<span>Agradecemos pela preferência!</span> <a href="#" style="background:transparent; color:white; padding: 5px;" onclick="audio.play();">↺</a>
+<span title="Importante">Agradecemos pela preferência!</span> <a href="#" title="Voltar" style="background:transparent; color:white; padding: 5px;" onclick="audio.play();">↺</a>
 </div>
 </div>
 <br/>
