--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="shortcut icon" href="img/im.jpg"/>
 <title>Compra Cambial</title>
-<link rel="stylesheet" href="style.css">
+<link rel="shortcut icon" href="img/oi.png"/>
 <style type="text/css">
 *{
 	margin: 0;
