--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<link rel="shortcut icon" href="img/im.jpg"/>
-<title>Compra Cambial</title>
 <link rel="shortcut icon" href="img/oi.png"/>
+<title>Compra Cambial</title>
+<link rel="stylesheet" href="style.css">
 <style type="text/css">
 *{
 	margin: 0;
