--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="shortcut icon" href="img/oi.png"/>
-<title>Compra Cambial</title>
+<title>Kwanzaki</title>
 <link rel="stylesheet" href="style.css">
 <style type="text/css">
 *{
@@ -20,7 +20,7 @@ body{
 	font-size: 15px;	
 	background: linear-gradient(80deg, #333, #060606, black, #333); 
 }
-#cc{color: #777; text-shadow: 0 1px gold; font-size: 16px;}
+#cc{color: #777; text-shadow: 0 1px gold; font-size: 17px;}
 a{text-decoration: none;}
 hr{border: 1px solid #990;}
 .el{border: 0.5px solid #999;}
@@ -142,7 +142,7 @@ header{
 
 
 <header>
-<a href="mailto:p1335614@gmail.com" id="cc" title="Saber mais" onclick="audio.play();">Compra Cambial</a>
+<a href="mailto:p1335614@gmail.com" id="cc" title="Saber mais" onclick="audio.play();">KWANZAKI</a>
 </header>
 
 <div id="modalbox0" class="modal0">
@@ -157,19 +157,19 @@ header{
 <center title="Clientes">
 <div class="container">
 <div class="slide active">
-<p class="tEX">"***278820 Recebeu 10.110,97 Kz"</p>
+<p class="tEX">"***278820 Recebeu 10.110,97 KZS"</p>
 <div id="next" onclick="next()"> >  </div>
 <div id="prev" onclick="prev()"> < </div>
 </div>
 
 <div class="slide">
-<p class="tEX">"***309228 Recebeu 1010.97 Kz"</p>
+<p class="tEX">"***309228 Recebeu 1010.97 KZS"</p>
 <div id="next" onclick="next()"> > </div>
 <div id="prev" onclick="prev()"> < </div>
 </div>
 	
 <div class="slide">
-<p class="tEX">"***440399 Recebeu 505.97 Kz"</p>
+<p class="tEX">"***440399 Recebeu 505.97 KZS"</p>
 <div id="next" onclick="next()"> > </div>
 <div id="prev" onclick="prev()"> < </div>
 </div> 
@@ -190,44 +190,44 @@ header{
 
 <div id="modalbox1" class="modal1">
 <div class="modalcontent1">
-<p>Envie 100.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 101.25 KZS ao seu nº Unitel money.</p>
+<p>Envie 100,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 101,25 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
-<p>Atendemos das 09:00 até às 15:00.</p>
+<p style="font-size: 12px;">Atendemos aos Sáb e aos Dom das 09:00 às 15:00.</p>
 <p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yeah"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
 <div id="modalbox2" class="modal2">
 <div class="modalcontent1">
-<p>Envie 250.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 252,50 KZS ao seu nº Unitel money.</p>
+<p>Envie 250,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 252,50 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
-<p>Atendemos das 09:00 até às 15:00.</p>
+<p style="font-size: 12px;">Atendemos aos Sáb e aos Dom das 09:00 às 15:00.</p>
 <p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yh"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
 <div id="modalbox3" class="modal3">
 <div class="modalcontent1">
-<p>Envie 500.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 505,00 KZS ao seu nº Unitel money.</p>
+<p>Envie 500,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 505,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
-<p>Atendemos das 09:00 até às 15:00.</p> 
+<p style="font-size: 12px;">Atendemos aos Sáb e aos Dom das 09:00 às 15:00.</p> 
 <p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yea"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 <div id="modalbox4" class="modal4">
 <div class="modalcontent1">
-<p>Envie 700.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 757,50 KZS ao seu nº Unitel money.</p>
+<p>Envie 700,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 757,50 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
-<p>Atendemos das 09:00 até às 15:00.</p>
+<p style="font-size: 12px;">Atendemos aos Sáb e aos Dom das 09:00 às 15:00.</p>
 <p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="hy"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
 <div id="modalbox5" class="modal5">
 <div class="modalcontent1">
-<p>Envie 1000.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 1010.00 KZS ao seu nº Unitel money.</p>
+<p>Envie 1000,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 1010,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
-<p>Atendemos das 09:00 até às 15:00.</p>
+<p style="font-size: 12px;">Atendemos aos Sáb e aos Dom das 09:00 às 15:00.</p>
 <p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="ea"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
@@ -236,16 +236,16 @@ header{
 <div class="modalcontent1">
 <p>Envie 2500,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 2525,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
-<p>Atendemos das 09:00 até às 15:00.</p>
+<p style="font-size: 12px;">Atendemos aos Sáb e aos Dom das 09:00 às 15:00.</p>
 <p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="ye"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
 
 <div id="modalbox7" class="modal7">
 <div class="modalcontent1">
-<p>Envie 5000.00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 5050,00 KZS ao seu nº Unitel money.</p>
+<p>Envie 5000,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 5050,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
-<p>Atendemos das 09:00 até às 15:00.</p>
+<p style="font-size: 12px;">Atendemos aos Sáb e aos Dom das 09:00 às 15:00.</p>
 <p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="ya"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
@@ -254,7 +254,7 @@ header{
 <div class="modalcontent1">
 <p>Envie 7500,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 7575,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
-<p>Atendemos das 09:00 até às 15:00.</p>
+<p style="font-size: 12px;">Atendemos aos Sáb e aos Dom das 09:00 às 15:00.</p>
 <p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yha"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
@@ -263,7 +263,7 @@ header{
 <div class="modalcontent1">
 <p>Envie 10.000,00 KZS a este nº 940278820 Unitel money, após 5 minutos, enviaremos devolta 10.100,00 KZS ao seu nº Unitel money.</p>
 <hr width="70%" style="margin-top: 10px; margin-bottom: 5px;">
-<p>Atendemos das 09:00 até às 15:00.</p>
+<p style="font-size: 12px;">Atendemos aos Sáb e aos Dom das 09:00 às 15:00.</p>
 <p id="yAno" title="Todos os direitos reservados" style="margin-top: 2px; margin-bottom: 2px; font-size:10px;" >&copy; <span id="yhe"></span>.</p><a href="#modalbox0"><button class="bt" title="Aceitar" onclick="audio.play();">OK</button></a>
 </div>
 </div>
